    * wtar files are expnaded during sync not during copy
    * Fixed unwtar for Windows

    user visible changes, admin:
    * new command svn2stage, to prepare folders for entering changes
    * new command wtar, to proparly tar what needs to be tared
    * new command createkeys

    programmer visible changes:
    * new method for PlatformSpecificHelperBase & derivatives: tar/untar
    * Implemented rmdir, rmfile for Windows
    * removed checks for __ALLOWED_COMMANDS__, this functionality is already covered by getattr(self, "do_"+the_command)

26/1/2014 0.7.2  Shai Shasag <shai@waves.com>

    user visible changes, client:
     * Fixed exception handling and output to stderr.
        Now all "bad" output should go to stderr. Errorlevel should be proearly set.

23/1/2014 0.7.1 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * progress report for folder actions
    * SET_ICON_TOOL_PATH instead of SET_ICON_PATH
    * better progress report for svn sync

23/1/2014 0.7.0 Shai Shasag <shai@waves.com>

     Main 0.7 features:
    * Check checksum of files after download.
    * Conditional document tags in yaml (see below)

    user visible changes, client:
    * Windows: wget gets --quite option
    * Windows: Running mkdir only if path does not exist
    * Removed the --state option, it was not working.
    * Removed the commands 'alias', 'shortcut' and 'fix_icon' , they were not used.
    * New help system: Usage: instl help command
    * Mac and Linux: "#!/usr/bin/env bash" instead of "#!/bin/sh" to be the shebang
    * Mac: Time measurement reporting in batch files
    * Checksum checking code
    * Windows: exit_if_error is added after most created batch file lines
    * All Mac & Linux rm commands generated by code were added the -f flags
    * Check for existance of file and it's checksum before issuing a sync command.
        Should be useful if sync was stopped half-way